# mnist

./: Cargo.toml  README.md
examples/: fashion_mnist.rs  mnist.rs
src/: download.rs  lib.rs
